<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="id.lacakcepat.covidnineteen.data.source.remote.model.User" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <ImageView
            android:id="@+id/iv_verification_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_verification"
            app:layout_constraintBottom_toTopOf="@+id/tv_verification_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_verification_title"
            style="@style/TextHeadingPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_number_verification_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_verification_msg"
            style="@style/TextBodyPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginPrimary"
            android:text="@string/login_number_verification_overview"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_verification_title"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_phone"
            style="@style/TextBodyPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@{@string/phone_number_with_code(user.phoneNumber)}"
            android:textColor="@color/colorTextPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_verification_msg"
            app:layout_constraintStart_toStartOf="@+id/tv_verification_msg"
            app:layout_constraintTop_toBottomOf="@+id/tv_verification_msg"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/phone_number_with_code" />

        <in.aabhasjindal.otptextview.OtpTextView
            android:id="@+id/otv_otp_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bar_active_color="@color/colorPrimary"
            app:bar_enabled="true"
            app:bar_inactive_color="@color/colorDivideSecondary"
            app:layout_constraintBottom_toTopOf="@+id/btn_verify"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_phone"
            app:length="4" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_verify"
            style="@style/TextButtonPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:background="@drawable/bg_button_disabled"
            android:enabled="false"
            android:paddingStart="@dimen/paddingHorizontal"
            android:paddingEnd="@dimen/paddingHorizontal"
            android:text="@string/verifikasi"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
